--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,14 @@
         <maven.compiler.target>18</maven.compiler.target>
     </properties>
     <dependencies>
+
+        <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
@@ -39,6 +47,7 @@
             <version>7.2.3</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
     <build>
         <plugins>
